src/objects/Products_E_R_H__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Products (E/R/H)</relationshipLabel>
        <relationshipName>Products_E_R_H</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <picklist>
            <picklistValues>
                <fullName>Essilor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Smile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R&amp;H</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nika</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Correction_Type__c</fullName>
        <label>Correction Type</label>
        <picklist>
            <picklistValues>
                <fullName>PAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SV</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Finishing__c</fullName>
        <label>Finishing</label>
        <picklist>
            <picklistValues>
                <fullName>Crizal Forte UV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crizal Easy UV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crizal Sun UV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Optifog UV</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Index__c</fullName>
        <label>Index</label>
        <picklist>
            <picklistValues>
                <fullName>1.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.67</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.74</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Material__c</fullName>
        <label>Material</label>
        <picklist>
            <picklistValues>
                <fullName>Organic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mineral</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Percent_Month__c</fullName>
        <label>% Month</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percent_PY__c</fullName>
        <label>% PY</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percent_Year__c</fullName>
        <label>% Year</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phototrop__c</fullName>
        <label>Phototrop</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Polarized__c</fullName>
        <label>Polarized</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Previous_Year__c</fullName>
        <label>PY</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projection__c</fullName>
        <label>Projection</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Purpose__c</fullName>
        <label>Purpose</label>
        <picklist>
            <picklistValues>
                <fullName>Car</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subtype__c</fullName>
        <label>Subtype</label>
        <picklist>
            <picklistValues>
                <fullName>VX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-VX</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Products (E/R/H)</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>Correction_Type__c</columns>
        <columns>Finishing__c</columns>
        <columns>Index__c</columns>
        <columns>Month__c</columns>
        <columns>Year__c</columns>
        <columns>Projection__c</columns>
        <columns>Previous_Year__c</columns>
        <columns>Percent_Year__c</columns>
        <columns>Percent_PY__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Products (E/R/H) Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Products (E/R/H)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>